mudularize popular.js

--- a/popular.html
+++ b/popular.html
@@ -54,6 +54,10 @@
     </div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./js/loader.js"></script>
+    <script src="./js/searchController.js"></script>
+    <script src="./js/viewController.js"></script>
+    <script src="./js/base.js"></script>
+    <script src="./js/mainController.js"></script>
     <script src="./js/popular.js"></script>
 </body>
 
